fix: conf docker for migrate database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,21 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        - DATABASE_URL=postgresql://postgres:todopass*1@postgres:5432/todoapp?schema=public
     ports:
       - '3000:3000'
     environment:
+      - PORT=3000
       - NODE_ENV=production
       - DATABASE_HOST=postgres
       - DATABASE_PORT=5432
       - DATABASE_USER=postgres
       - DATABASE_PASSWORD=todopass*1
       - DATABASE_NAME=todoapp
+      - DATABASE_URL=postgresql://postgres:todopass*1@postgres:5432/todoapp?schema=public
+    env_file:
+      - .env
     depends_on:
       - postgres
     networks:
